--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -54,4 +54,12 @@
         <attr name="minSummaryLines" format="integer" />
     </declare-styleable>
 
+    <!-- Base attributes available to ProperSeekBarPreference. -->
+    <declare-styleable name="ProperSeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="showSign" format="boolean" />
+        <attr name="units" format="string|reference" />
+        <attr name="continuousUpdates" format="boolean" />
+        <attr name="defaultText" format="string|reference" />
+    </declare-styleable>
 </resources>
